# sleeqc

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/mldsa44/: .project
components/mldsa87/: CMakeLists.txt
dilithium2/: .cproject  .project  CMakeLists.txt  sdkconfig.old
dilithium2/components/ml-dsa-44/: .cproject  CMakeLists.txt
dilithium2/main/: .cproject  CMakeLists.txt  main.c
machine-learning/: adaptive_pqc_model.h5  client.py  client_logger.py  combined.csv  model-eval.py  model-training.py  preprocessing.py  quantization.py
main/: CMakeLists.txt  adaptive_pqc_model_lite.tflite  main.cpp  model_data.h  tflite_runner.cpp  tflite_runner.h
